<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.tab.HelpTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/helpText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpString1" />

        <ImageView
            android:id="@+id/helpImage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/helpText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpString2" />

        <ImageView
            android:id="@+id/helpImage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/helpText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpString3" />

        <ImageView
            android:id="@+id/helpImage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/helpText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpString4" />

        <ImageView
            android:id="@+id/helpImage4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/helpText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpString5" />
    </LinearLayout>
</ScrollView>